// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Token /> create token component 1`] = `
<span
  className="fd-token"
  role="button"
  tabIndex="0"
>
  <span
    className="fd-token__text"
  >
    Bibendum
  </span>
  <button
    className="fd-token__close"
    onClick={[Function]}
    tabIndex="-1"
  />
</span>
`;

exports[`<Token /> create token component 2`] = `
<span
  className="fd-token blue"
  role="button"
  tabIndex="0"
>
  <span
    className="fd-token__text"
  >
    Bibendum
  </span>
  <button
    className="fd-token__close"
    onClick={[Function]}
    tabIndex="-1"
  />
</span>
`;

exports[`<Token /> create token component 3`] = `
<span
  className="fd-token fd-token--readonly"
  role="button"
  tabIndex="0"
>
  <span
    className="fd-token__text"
  >
    Bibendum
  </span>
  <button
    className="fd-token__close"
    onClick={[Function]}
    tabIndex="-1"
  />
</span>
`;

exports[`<Token /> create token component 4`] = `
<span
  className="fd-token fd-token--compact"
  role="button"
  tabIndex="0"
>
  <span
    className="fd-token__text"
  >
    Bibendum
  </span>
  <button
    className="fd-token__close"
    onClick={[Function]}
    tabIndex="-1"
  />
</span>
`;
